--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 </head>
 <style>
     body {
-        background-image: linear-gradient(45deg, #ddd6f3, #faaca8);
+        background-image: linear-gradient(45deg, #ff5f6d, #ffc371);
     }
 
     html {
