Changed few text elements

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <img alt="hero" src="apple-touch-icon.png" style="border-radius: 360px; width: 75px; height: 75px;">
-                <span class="ml-3 text-xl">Rishikesh Joshi</span>
+                <span class="ml-3 text-xl">Rishikesh Joshi | Founder at BlipDot</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="" class="mr-5 hover:text-gray-900">Home</a>
@@ -141,7 +141,7 @@
     <footer class="text-gray-700 body-font">
         <div>
             <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                <p class="text-black-500 text-sm text-center sm:text-left">© 2020 Rishikesh Joshi</p>
+                <p class="text-black-500 text-sm text-center sm:text-left">MIT © 2020 Rishikesh Joshi</p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
                     <a class="text-black-500" href="https://www.facebook.com/profile.php?id=100011425792712">
                         <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
