--- a/website/index.html
+++ b/website/index.html
@@ -68,7 +68,7 @@
             <div class="flex flex-wrap -m-2">
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-black-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="androidLogo.png">
                         <div class="flex-grow">
@@ -80,7 +80,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="pythonLogo.png">
                         <div class="flex-grow">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="MERN.png">
                         <div class="flex-grow">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="linuxLogo.jpg">
                         <div class="flex-grow">
@@ -115,7 +115,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="gitLogo.png">
                         <div class="flex-grow">
@@ -127,7 +127,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="kotlinLogo.png">
                         <div class="flex-grow">
