--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,28 @@
     <title>Rishikesh Joshi</title>
 </head>
 <style>
-    body {
-        background-image: linear-gradient(45deg, #ff5f6d, #ffc371);
+    body{
+        width: 100%;
+        height: 100vh;
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 512% 512%;
+        position: relative;
+        animation: changeBackground 10s ease-in-out infinite;
+
+    }
+
+    @keyframes changeBackground {
+        0% {
+            background-position: 0 50%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0 50%;
+        }
     }
 
     html {
