--- a/index.html
+++ b/index.html
@@ -11,8 +11,28 @@
     <title>Rishikesh Joshi</title>
 </head>
 <style>
-    body {
-        background-image: linear-gradient(45deg, #ff5f6d, #ffc371);
+    body{
+        width: 100%;
+        height: 100vh;
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 512% 512%;
+        position: relative;
+        animation: changeBackground 10s ease-in-out infinite;
+
+    }
+
+    @keyframes changeBackground {
+        0% {
+            background-position: 0 50%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0 50%;
+        }
     }
 
     html {
@@ -68,7 +88,7 @@
             <div class="flex flex-wrap -m-2">
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-black-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="androidLogo.png">
                         <div class="flex-grow">
@@ -80,7 +100,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="pythonLogo.png">
                         <div class="flex-grow">
@@ -92,7 +112,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="MERN.png">
                         <div class="flex-grow">
@@ -103,7 +123,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="linuxLogo.jpg">
                         <div class="flex-grow">
@@ -115,7 +135,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="gitLogo.png">
                         <div class="flex-grow">
@@ -127,7 +147,7 @@
                 </div>
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
                     <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-                        <img alt="team"
+                        <img alt="skill"
                             class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
                             src="kotlinLogo.png">
                         <div class="flex-grow">
