--- a/website/index.html
+++ b/website/index.html
@@ -13,9 +13,9 @@
 <style>
     body{
         width: 100%;
-        height: auto;
+        height: 100hv;
         background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
+        background-size: 1234256400% 1234256400%;
         position: relative;
         animation: changeBackground 10s ease-in-out infinite;
 
