--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
 </head>
 <style>
     body{
-        width: 100%;
-        height: 100vh;
-        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 1000% 1000%;
-        position: relative;
+        min-height: 100vh;
+        background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 500% 500%;
         animation: changeBackground 10s infinite alternate;
-
     }
 
     @keyframes changeBackground {
