--- a/website/index.html
+++ b/website/index.html
@@ -43,7 +43,7 @@
                 <span class="ml-3 text-xl">Rishikesh Joshi | Founder at BlipDot</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a href="" class="mr-5 hover:text-gray-900">Home</a>
+                <a href="#" class="mr-5 hover:text-gray-900">Home</a>
                 <a href="#AboutTitle" class="mr-5 hover:text-gray-900">About</a>
                 <a href="#SkillsTitle" class="mr-5 hover:text-gray-900">Skills</a>
                 <a href="mailto:rjjoshixyz@gmail.com" class="mr-5 hover:text-gray-900">Contact</a>
