--- a/website/index.html
+++ b/website/index.html
@@ -24,6 +24,10 @@
             background-position: left;
         }
 
+        50% {
+            background-position: center;
+        }
+
         100% {
             background-position: right;
         }
