--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
         background-size: 5000% 5000%;
         background-attachment: fixed;
-        animation: changeBackground 10s ease-in-out infinite;
+        animation: changeBackground 10s alternate infinite;
     }
 
     @keyframes changeBackground {
