--- a/website/index.html
+++ b/website/index.html
@@ -9,52 +9,83 @@
     <link rel="icon" type="image/png" href="apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Rishikesh Joshi</title>
+    <script>
+        window.onscroll = function () { stickyNavbar() };
+        var navbar = document.getElementById("navbar");
+        var sticky = navbar.offsetTop;
+        function stickyNavbar() {
+            if (window.pageYOffset >= sticky) {
+                navbar.classList.add("sticky");
+            } else {
+                navbar.classList.remove("sticky")
+            }
+        }
+    </script>
+    <style>
+        body {
+            min-height: 100vh;
+            background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 5000% 5000%;
+            background-attachment: fixed;
+            animation: changeBackground 10s alternate infinite;
+        }
+
+        #navbar {
+            overflow: hidden;
+            background-color: #cccc;
+        }
+
+        .sticky {
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+
+        .sticky+.content {
+            padding-top: 60px;
+        }
+
+        @keyframes changeBackground {
+            0% {
+                background-position: left;
+            }
+
+            50% {
+                background-position: center;
+            }
+
+            100% {
+                background-position: right;
+            }
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+        footer {
+            background-color: #cccc;
+        }
+    </style>
 </head>
-<style>
-    body{
-        min-height: 100vh;
-        background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 5000% 5000%;
-        background-attachment: fixed;
-        animation: changeBackground 10s alternate infinite;
-    }
 
-    @keyframes changeBackground {
-        0% {
-            background-position: left;
-        }
-
-        50% {
-            background-position: center;
-        }
-
-        100% {
-            background-position: right;
-        }
-    }
-
-    html {
-        scroll-behavior: smooth;
-    }
-</style>
 
 <body>
 
-    <header class="text-gray-700 body-font">
+    <header class="text-gray-700 body-font sticky" id="navbar">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                <img alt="hero" src="apple-touch-icon.png" style="border-radius: 360px; width: 75px; height: 75px;">
+                <img alt="hero" src="apple-touch-icon.png" style="border-radius: 360px; width: 40px; height: 40px;">
                 <span class="ml-3 text-xl">Rishikesh Joshi | Founder at BlipDot</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="#" class="mr-5 hover:text-gray-900">Home</a>
                 <a href="#AboutTitle" class="mr-5 hover:text-gray-900">About</a>
                 <a href="#SkillsTitle" class="mr-5 hover:text-gray-900">Skills</a>
-                <a href="mailto:rjjoshixyz@gmail.com" class="mr-5 hover:text-gray-900">Contact</a>
+                <a href="#contact" class="mr-5 hover:text-gray-900">Contact</a>
             </nav>
         </div>
     </header>
-    <section class="text-gray-700 body-font">
+    <section class="text-gray-700 body-font content">
         <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
             <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
             <div class="text-center lg:w-2/3 w-full">
@@ -63,11 +94,11 @@
             </div>
         </div>
     </section>
-    <section class="text-black-700 body-font">
+    <section class="text-black-700 body-font" id="AboutTitle">
         <div class="container px-5 py-24 mx-auto">
             <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
-                <span class="ml-3 text-xl" style="font-size: 40px;" id="AboutTitle"><u>About</u></span>
-                <br><br><br>
+                <span class="ml-3 text-xl" style="font-size: 40px;"><u>About</u></span>
+                <br><br><br><br>
                 <p class="leading-relaxed text-lg">Hi! I am Rishikesh Joshi. I am currently a senior in high school,
                     and I love coding. I was first introduced to coding by a contest called Google Code-in which was
                     about
@@ -79,10 +110,10 @@
             </div>
         </div>
     </section>
-    <section class="text-black-700 body-font">
+    <section class="text-black-700 body-font" id="SkillsTitle">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-col text-center w-full mb-20">
-                <span class="ml-3 text-xl" style="font-size: 40px;" id="SkillsTitle"><u>My Skills</u></span>
+                <span class="ml-3 text-xl" style="font-size: 40px;"><u>My Skills</u></span>
             </div>
             <div class="flex flex-wrap -m-2">
                 <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
@@ -157,7 +188,7 @@
                 </div>
             </div>
     </section>
-    <footer class="text-gray-700 body-font">
+    <footer class="text-gray-700 body-font" id="contact">
         <div>
             <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
                 <p class="text-black-500 text-sm text-center sm:text-left">MIT © 2020 Rishikesh Joshi</p>
