--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             min-height: 100vh;
             background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
             background-size: 5000% 5000%;
-            background-attachment:unset;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             animation: changeBackground 10s alternate infinite;
         }
 
