Changed navbar color and added shadow

--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,10 @@
 
         #navbar {
             overflow: hidden;
-            background-color: #cccc;
+            background-color: #fff;
+            -webkit-box-shadow: 0 8px 6px -6px rgb(122, 122, 122);
+            -moz-box-shadow: 0 8px 6px -6px rgb(122, 122, 122);
+            box-shadow: 0 8px 6px -6px rgb(122, 122, 122)
         }
 
         .sticky {
@@ -64,8 +67,9 @@
         html {
             scroll-behavior: smooth;
         }
+
         footer {
-            background-color: #cccc;
+            background-color: #fff;
         }
     </style>
 </head>
@@ -77,12 +81,13 @@
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <img alt="hero" src="apple-touch-icon.png" style="border-radius: 360px; width: 40px; height: 40px;">
-                <span class="ml-3 text-xl">Rishikesh Joshi | Founder at BlipDot</span>
+                <span class="ml-3 text-xl">Rishikesh Joshi</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                 <a href="#" class="mr-5 hover:text-gray-900">Home</a>
                 <a href="#AboutTitle" class="mr-5 hover:text-gray-900">About</a>
                 <a href="#SkillsTitle" class="mr-5 hover:text-gray-900">Skills</a>
+                <a href="#InterestsTitle" class="mr-5 hover:text-gray-900">Interests</a>
                 <a href="#contact" class="mr-5 hover:text-gray-900">Contact</a>
             </nav>
         </div>
