--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,6 @@
     <link rel="manifest" href="/site.webmanifest">
     <title>Rishikesh Joshi</title>
     <script>
-        window.onscroll = stickyNavbar();
         var navbar = document.getElementById("navbar");
         var sticky = navbar.offsetTop;
         function stickyNavbar() {
@@ -25,7 +24,7 @@
         body {
             width: 100%;
             min-height: 100vh;
-            background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-image: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #00ffc3);
             background-size: 5000% 5000%;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -85,11 +84,11 @@
                 <span class="ml-3 text-xl">Rishikesh Joshi</span>
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a href="#" class="mr-5 hover:text-gray-900">Home</a>
-                <a href="#AboutTitle" class="mr-5 hover:text-gray-900">About</a>
-                <a href="#SkillsTitle" class="mr-5 hover:text-gray-900">Skills</a>
-                <a href="#InterestsTitle" class="mr-5 hover:text-gray-900">Interests</a>
-                <a href="#contact" class="mr-5 hover:text-gray-900">Contact</a>
+                <a href="#" class="mr-5 hover:text-gray-500">Home</a>
+                <a href="#AboutTitle" class="mr-5 hover:text-gray-500">About</a>
+                <a href="#SkillsTitle" class="mr-5 hover:text-gray-500">Skills</a>
+                <a href="#InterestsTitle" class="mr-5 hover:text-gray-500">Interests</a>
+                <a href="#contact" class="mr-5 hover:text-gray-500">Contact</a>
             </nav>
         </div>
     </header>
