Added arrow and animation

--- a/website/index.html
+++ b/website/index.html
@@ -115,7 +115,6 @@
                             style="border-radius: 360px; width: 45px; height: 45px;">
                         <span class="ml-3 text-xl">Rishikesh Joshi</span>
                     </a>
-
                     <div class="block lg:hidden">
                         <button id="hamburgerbtn"
                             class="flex items-center px-4 py-4 border rounded text-white-200 border-white-400 hover:text-white hover:border-white">
@@ -144,14 +143,19 @@
         </div>
     </header>
     <section class="text-gray-700 body-font content">
-        <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+        <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
             <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
-            <div class="text-center lg:w-2/3 w-full">
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Hey! Welcome To My Website :)
-                </h1>
+            <br>
+            <div class="container mx-auto flex flex-col justify-center items-center">
+                <a href="#AboutTitle">
+                <svg class="animate-bounce w-12 h-12 text-gray-900" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+                    <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+                  </svg>
+                </a>
             </div>
         </div>
     </section>
+    <br><br><br><br>
     <section class="text-black-700 body-font" id="AboutTitle">
         <div class="container px-5 py-24 mx-auto">
             <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
