--- a/website/index.html
+++ b/website/index.html
@@ -62,6 +62,20 @@
         .active {
             display: block;
         }
+
+        .myFace {
+            animation: fadeInAnimation ease 1.5s; 
+            animation-iteration-count: 1; 
+        }
+
+        @keyframes fadeInAnimation { 
+            0% { 
+                opacity: 0; 
+            } 
+            100% { 
+                opacity: 1; 
+            } 
+        } 
     </style>
 </head>
 
@@ -144,7 +158,7 @@
     </header>
     <section class="text-gray-700 body-font content">
         <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
-            <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
+            <img class="myFace lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="gciphoto.png" style="border-radius: 20px;">
             <br>
             <div class="container mx-auto flex flex-col justify-center items-center">
                 <a href="#AboutTitle">
