--- a/website/index.html
+++ b/website/index.html
@@ -162,9 +162,8 @@
             <br>
             <div class="container mx-auto flex flex-col justify-center items-center">
                 <a href="#AboutTitle">
-                <svg class="animate-bounce w-12 h-12 text-gray-900" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-                    <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
-                  </svg>
+                    <img src="https://img.icons8.com/ios/64/000000/double-down.png" class="animate-bounce w-12 h-12 text-gray-900"/>
+                    
                 </a>
             </div>
         </div>
@@ -299,6 +298,9 @@
                             <circle cx="4" cy="4" r="2" stroke="none"></circle>
                         </svg>
                     </a>
+                </span>
+                <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+                    <a href="https://icons8.com/icon/37223/double-down">Double Down icon by Icons8</a>
                 </span>
             </div>
         </div>
