Changed hrefs (im stupid)

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="apple-touch-icon.png">
-    <link rel="manifest" href="/website/site.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Rishikesh Joshi</title>
     <style>
         html {
@@ -213,7 +213,7 @@
                 <nav class="flex-row md:justify-between flex-wrap">
                     <div class="flex flex-row justify-between">
                         <a class="flex title-font font-medium items-center text-white-900 mb-4 md:mb-0">
-                            <img alt="hero" src="/website/src/apple-touch-icon.png"
+                            <img alt="hero" src="src/apple-touch-icon.png"
                                 style="border-radius: 360px; width: 45px; height: 45px;">
                             <span class="ml-3 text-xl">Rishikesh Joshi</span>
                         </a>
@@ -247,7 +247,7 @@
         </header>
         <section class="text-gray-700 body-font content">
             <div class="container mx-auto flex px-5 py-20 items-center justify-center flex-col">
-                <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="/website/src/gciphoto.png" style="border-radius: 20px;">
+                <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10" alt="hero" src="src/gciphoto.png" style="border-radius: 20px;">
                 <br>
                 <div class="container mx-auto flex flex-col justify-center items-center">
                     <a href="#AboutTitle">
@@ -291,7 +291,7 @@
                         <div class="h-full flex items-center border-black-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/androidLogo.png">
+                                src="src/androidLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-1200 title-font font-large"><b>Android</b></h2>
                                 <p class="text-gray-dark-500">I enjoy developing apps. I have a few android projects
@@ -304,7 +304,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/pythonLogo.png">
+                                src="src/pythonLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Python</b></h2>
                                 <p class="text-black-500">Python was the very first programming language that I learnt.
@@ -317,7 +317,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/MERN.png">
+                                src="src/MERN.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Full Stack Developer</b></h2>
                                 <p class="text-black-500">I use the MERN stack (MongoDB, Express.js, React.js, Node.js).
@@ -329,7 +329,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/linuxLogo.jpg">
+                                src="src/linuxLogo.jpg">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium"><b>Linux</b></h2>
                                 <p class="text-black-500">I love linux. I have experimented with almost all of their
@@ -342,7 +342,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/gitLogo.png">
+                                src="src/gitLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Git</h2>
                                 <p class="text-black-500">Almost all my projects use git version control. I am very
@@ -354,7 +354,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/kotlinLogo.png">
+                                src="src/kotlinLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Kotlin</h2>
                                 <p class="text-black-500">I am fluent in Kotlin and use it for android development :)
@@ -366,7 +366,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/dartLogo.png">
+                                src="src/dartLogo.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Dart</h2>
                                 <p class="text-black-500">I learnt this with the intention to learn flutter... But then I gave up xD. I at least learnt dart ¯\_(ツ)_/¯
@@ -378,7 +378,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/java.png">
+                                src="src/java.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Java</h2>
                                 <p class="text-black-500">I learnt java at school. I use it for nothing other than school (I hate java).
@@ -390,7 +390,7 @@
                         <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
                             <img alt="skill"
                                 class="w-16 h-16 bg-black object-cover object-center flex-shrink-0 rounded-full mr-4"
-                                src="/website/src/rubiksCube.png">
+                                src="src/rubiksCube.png">
                             <div class="flex-grow">
                                 <h2 class="text-gray-900 title-font font-medium">Speedcuber</h2>
                                 <p class="text-black-500">I started cubing in 4th grade. I attended multiple contests and was the State Champion for 2x2 in the years 2016 and 2017.
@@ -412,7 +412,7 @@
                 <div class="flex flex-wrap -m-4 justify-center">
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg border-black-700">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="/website/src/githubLogo.png"
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="src/githubLogo.png"
                                 alt="contact">
                             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
                                     href="https://github.com/Creatune" target="_blank">Visit</a></h3>
@@ -420,7 +420,7 @@
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="/website/src/facebookLogo.jpeg"
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="src/facebookLogo.jpeg"
                                 alt="contact">
                             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
                                     href="https://www.facebook.com/profile.php?id=100011425792712"
@@ -429,7 +429,7 @@
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 w-screen p-4">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="/website/src/instagramLogo.jpeg"
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="src/instagramLogo.jpeg"
                                 alt="contact">
                             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
                                     href="https://www.instagram.com/rjoshi869/?hl=en" target="_blank">Visit</a></h3>
@@ -437,7 +437,7 @@
                     </div>
                     <div class="xl:w-1/4 md:w-1/2 p-4 w-screen">
                         <div class="bg-gray-100 p-6 rounded-lg">
-                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="/website/src/linkedinLogo.jpeg"
+                            <img class="h-40 rounded w-full object-cover object-center mb-6" src="src/linkedinLogo.jpeg"
                                 alt="contact">
                             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font text-center"><a
                                     href="https://www.linkedin.com/in/rishikesh-joshi-46a8961a5/"
